--- a/vaccinations.ipynb
+++ b/vaccinations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,9 +30,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>location</th>\n",
+       "      <th>iso_code</th>\n",
+       "      <th>date</th>\n",
+       "      <th>total_vaccinations</th>\n",
+       "      <th>people_vaccinated</th>\n",
+       "      <th>people_fully_vaccinated</th>\n",
+       "      <th>total_boosters</th>\n",
+       "      <th>daily_vaccinations_raw</th>\n",
+       "      <th>daily_vaccinations</th>\n",
+       "      <th>total_vaccinations_per_hundred</th>\n",
+       "      <th>people_vaccinated_per_hundred</th>\n",
+       "      <th>people_fully_vaccinated_per_hundred</th>\n",
+       "      <th>total_boosters_per_hundred</th>\n",
+       "      <th>daily_vaccinations_per_million</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021-02-22</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021-02-23</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1367.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>34.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021-02-24</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1367.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>34.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021-02-25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1367.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>34.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021-02-26</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1367.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>34.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      location iso_code        date  total_vaccinations  people_vaccinated  \\\n",
+       "0  Afghanistan      AFG  2021-02-22                 0.0                0.0   \n",
+       "1  Afghanistan      AFG  2021-02-23                 NaN                NaN   \n",
+       "2  Afghanistan      AFG  2021-02-24                 NaN                NaN   \n",
+       "3  Afghanistan      AFG  2021-02-25                 NaN                NaN   \n",
+       "4  Afghanistan      AFG  2021-02-26                 NaN                NaN   \n",
+       "\n",
+       "   people_fully_vaccinated  total_boosters  daily_vaccinations_raw  \\\n",
+       "0                      NaN             NaN                     NaN   \n",
+       "1                      NaN             NaN                     NaN   \n",
+       "2                      NaN             NaN                     NaN   \n",
+       "3                      NaN             NaN                     NaN   \n",
+       "4                      NaN             NaN                     NaN   \n",
+       "\n",
+       "   daily_vaccinations  total_vaccinations_per_hundred  \\\n",
+       "0                 NaN                             0.0   \n",
+       "1              1367.0                             NaN   \n",
+       "2              1367.0                             NaN   \n",
+       "3              1367.0                             NaN   \n",
+       "4              1367.0                             NaN   \n",
+       "\n",
+       "   people_vaccinated_per_hundred  people_fully_vaccinated_per_hundred  \\\n",
+       "0                            0.0                                  NaN   \n",
+       "1                            NaN                                  NaN   \n",
+       "2                            NaN                                  NaN   \n",
+       "3                            NaN                                  NaN   \n",
+       "4                            NaN                                  NaN   \n",
+       "\n",
+       "   total_boosters_per_hundred  daily_vaccinations_per_million  \n",
+       "0                         NaN                             NaN  \n",
+       "1                         NaN                            34.0  \n",
+       "2                         NaN                            34.0  \n",
+       "3                         NaN                            34.0  \n",
+       "4                         NaN                            34.0  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# read vaccinations csv\n",
     "\n",
@@ -43,9 +212,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>location</th>\n",
+       "      <th>iso_code</th>\n",
+       "      <th>date</th>\n",
+       "      <th>people_vaccinated</th>\n",
+       "      <th>people_fully_vaccinated</th>\n",
+       "      <th>total_boosters</th>\n",
+       "      <th>daily_vaccinations</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021-02-22</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021-02-23</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1367.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021-02-24</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1367.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021-02-25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1367.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021-02-26</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1367.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      location iso_code        date  people_vaccinated  \\\n",
+       "0  Afghanistan      AFG  2021-02-22                0.0   \n",
+       "1  Afghanistan      AFG  2021-02-23                NaN   \n",
+       "2  Afghanistan      AFG  2021-02-24                NaN   \n",
+       "3  Afghanistan      AFG  2021-02-25                NaN   \n",
+       "4  Afghanistan      AFG  2021-02-26                NaN   \n",
+       "\n",
+       "   people_fully_vaccinated  total_boosters  daily_vaccinations  \n",
+       "0                      NaN             NaN                 NaN  \n",
+       "1                      NaN             NaN              1367.0  \n",
+       "2                      NaN             NaN              1367.0  \n",
+       "3                      NaN             NaN              1367.0  \n",
+       "4                      NaN             NaN              1367.0  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# set columns for first table\n",
     "\n",
@@ -55,9 +330,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>location</th>\n",
+       "      <th>iso_code</th>\n",
+       "      <th>date</th>\n",
+       "      <th>people_vaccinated_per_hundred</th>\n",
+       "      <th>people_fully_vaccinated_per_hundred</th>\n",
+       "      <th>total_boosters_per_hundred</th>\n",
+       "      <th>daily_vaccinations_per_million</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021-02-22</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021-02-23</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>34.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021-02-24</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>34.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021-02-25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>34.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021-02-26</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>34.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      location iso_code        date  people_vaccinated_per_hundred  \\\n",
+       "0  Afghanistan      AFG  2021-02-22                            0.0   \n",
+       "1  Afghanistan      AFG  2021-02-23                            NaN   \n",
+       "2  Afghanistan      AFG  2021-02-24                            NaN   \n",
+       "3  Afghanistan      AFG  2021-02-25                            NaN   \n",
+       "4  Afghanistan      AFG  2021-02-26                            NaN   \n",
+       "\n",
+       "   people_fully_vaccinated_per_hundred  total_boosters_per_hundred  \\\n",
+       "0                                  NaN                         NaN   \n",
+       "1                                  NaN                         NaN   \n",
+       "2                                  NaN                         NaN   \n",
+       "3                                  NaN                         NaN   \n",
+       "4                                  NaN                         NaN   \n",
+       "\n",
+       "   daily_vaccinations_per_million  \n",
+       "0                             NaN  \n",
+       "1                            34.0  \n",
+       "2                            34.0  \n",
+       "3                            34.0  \n",
+       "4                            34.0  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# set columns for second table\n",
     "\n",
@@ -67,9 +455,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>location</th>\n",
+       "      <th>iso_code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Africa</td>\n",
+       "      <td>OWID_AFR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>ALB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>DZA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>AND</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      location  iso_code\n",
+       "0  Afghanistan       AFG\n",
+       "1       Africa  OWID_AFR\n",
+       "2      Albania       ALB\n",
+       "3      Algeria       DZA\n",
+       "4      Andorra       AND"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# group by country for third table \n",
     "\n",
@@ -77,22 +534,6 @@
     "# vaccination_country_df.head()# Setting Up Country Reference Table\n",
     "countries_df = pd.DataFrame({\"location\": vaccinations_df[\"location\"].unique(), \"iso_code\": vaccinations_df[\"iso_code\"].unique()})\n",
     "countries_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# group by country for forth table region_data_metadata\n",
-    "\n",
-    "vaccination_country_groupby = vaccination_country_df.groupby(['Country_Region', 'Date']).sum()['Recoveries']\n",
-    "region_date_metadata_groupby = pd.DataFrame(region_date_metadata_groupby)\n",
-    "region_date_metadata_groupby\n",
-    "\n",
-    "# vaccination_country_df = vaccinations_df.groupby\n",
-    "# vaccination_country_df.head()"
    ]
   },
   {
